Fixed nav pane color and visibility

--- a/neighborhoodMap/css/style.css
+++ b/neighborhoodMap/css/style.css
@@ -111,7 +111,7 @@ body {
 		margin-right: auto;
 		margin-left: auto;
 		opacity: 0.9;
-		background-color: #191919;
+		background-color: #999999;
 		padding: 15px;
 	}
 
